[tool.poetry]
name = "nutband"
version = "0.1.0"
description = ""
authors = ["Juraj Bednar <juraj@bednar.io>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.3.0"
cashu = "^0.16.0"
lxmf = "^0.5.4"
rns = "^0.8.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
